tdf#92124 DOCX import: don't add a dummy Suffix for an empty LabelFollowedBy

Change-Id: I0c4366ad0a2f81a198860869f670767343a392be